@@ -1,3 +1,8 @@
+2006-02-03	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-url.c: Define FNM_CASEFOLD for systems that don't support it.
+	  Bug #1423.
+
 2006-01-31	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_button_press_event): Reset
